# MSMetaEnhancer

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: anaconda.yml  codeql-analysis.yml  publish_pypi.yaml  python-package-conda.yml  python-package.yml  test-package.yml
MSMetaEnhancer/: __init__.py  app.py
MSMetaEnhancer/libs/: Annotator.py  Converter.py  Curator.py  Spectra.py
conda/: environment-build.yml  environment-dev.yml  meta.yaml  meta.yml
docs/: requirements.txt
docs/source/: CONTRIBUTING.md  MSMetaEnhancer.libs.computeConverters.rst  MSMetaEnhancer.libs.data.rst  MSMetaEnhancer.libs.rst  MSMetaEnhancer.libs.services.rst  MSMetaEnhancer.libs.utils.rst  MSMetaEnhancer.libs.webConverters.rst  MSMetaEnhancer.rst  changelog.rst  conf.py  index.rst  pyMSPannotator.libs.rst  pyMSPannotator.libs.services.rst  pyMSPannotator.libs.utils.rst  pyMSPannotator.rst
galaxy/: generate_options.py
libs/: Annotator.py  Converter.py  Curator.py  MSP.py  Spectra.py  __init__.py
libs/services/: CIR.py  CTS.py  Converter.py  (+4 more)
paper/: paper.bib  paper.md
pyMSPannotator/: __init__.py  app.py
readthedocs/: api.rst  conf.py  index.rst
tests/: __init__.py  test_BridgeDB.py  test_CIR.py  test_CTS.py  test_IDSM.py  test_MSP.py  test_NIH.py  test_NLM.py  test_PubChem.py  test_annotator.py  test_application.py  test_converter.py  test_curator.py  test_integration.py  test_io.py  test_pubchem.py  test_rdkit.py  utils.py
(+60 files in other folders)
