[tool.poetry]
name = "msmetaenhancer"
version = "0.4.0"
description = "Repository for tool that adds more annotations (e.g. SMILES, InChI, CAS number) to MSP files (Python version)."
authors = [
    "Helge Hecht <helge.hecht@recetox.muni.cz>",
    "Matej Trojak <matej.trojak@recetox.muni.cz>"
]
license = "MIT"
readme = "README.md"
packages = [
    { include = "MSMetaEnhancer" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
matchms = ">=0.28.2"
pandas = "^2.2.1"
scipy = "^1.12.0"
requests = "^2.31.0"
aiohttp = "^3.9.3"
asyncstdlib = "^3.12.0"
frozendict = "^2.4.0"
twine = "^5.0.0"
tabulate = "^0.9.0"
rdkit = ">=2024.3.5,<2025.0.0"
multidict = "^6.0.5"
aiocircuitbreaker = "^2.0.0"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
mock = "^5.1.0"
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
pytest-aiohttp = "^1.0.5"
pytest-dependency = "^0.6.0"
myst-parser = "^2.0.0"
flake8 = "^7.0.0"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
readthedocs-sphinx-ext = "^2.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
